--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,5 +1,56 @@
-// Import from application.scss:
-
-@import "foundation_and_overrides";
+@import "materialize";
 @import "codemirror";
-@import "codemirror/themes/material"
+@import "codemirror/themes/material";
+
+nav {
+  background-color: #263238;
+  color: #CDDC39;
+  margin-bottom: 15px;
+  padding-right: 7%;
+  padding-left: 7%;
+
+  .right.hide-on-med-and-down li:hover {
+    background-color: #37474F;
+  }
+}
+
+.waves-input-wrapper {
+  background-color: #263238;
+}
+
+.waves-effect input[type="submit"] {
+    color: #fff;
+}
+
+a.waves-effect.waves-light.btn {
+  background-color: #CDDC39;
+  color: #263238;
+}
+
+
+table {
+  .last {
+    padding: 15px 60px;
+  }
+}
+
+h2 {
+  padding-left: 20%;
+  font-size: 2.5em;
+  color: #263238;
+}
+
+form {
+  padding-left: 20%;
+  padding-right: 20%;
+
+  label {
+    font-size: 1em;
+    color: #616161;
+    line-height: 2em;
+  }
+
+  input[type="submit"] {
+
+  }
+}
