--- a/app/views/admin/categories/_form.html.haml
+++ b/app/views/admin/categories/_form.html.haml
@@ -8,5 +8,5 @@
 
   =f.input :image, as: :file
 
-  =f.submit
-  = link_to('Cancel', admin_categories_url, class: 'button')
+  = f.submit(class: 'btn waves-effect waves-light')
+  = link_to('Cancel', admin_categories_url, class: 'btn waves-effect waves-light')
