--- a/app/views/posts/_medium_unit.html.haml
+++ b/app/views/posts/_medium_unit.html.haml
@@ -1,6 +1,9 @@
-.post.medium
-  %h2= post.title
-  %p= post.category.name
-  %p= post.summary
-  = image_tag post.image.url(:medium)
-  = link_to 'Read Post', post_url(post)
+%a.post_wrapper{class: :medium, href: post_url(post)}
+  .post{style: "background-image: url('#{post.image.url(:medium)}')"}
+    .background
+      .titles
+        %h2= post.title
+        %h3
+          In:
+          = post.category.name
+        %p= post.summary
