--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,9 +1,14 @@
 %h2= @category.name
 
-= image_tag @category.image.url(:hero)
-
 - @posts.each do |post|
-    = render partial: 'posts/medium_unit', locals: {post: post}
+  %a.post_wrapper{class: :medium, href: post_url(post)}
+    .post{style: "background-image: url('#{post.image.url(:medium)}')"}
+      .background
+        .titles
+          %h2= post.title
+          %h3
+            In:
+            = post.category.name
+          %p= post.summary
 
 = will_paginate @posts
-
