Setting up paperclip for heroku

--- a/app/assets/stylesheets/pages/about.scss
+++ b/app/assets/stylesheets/pages/about.scss
@@ -9,8 +9,8 @@
     position: absolute;
     font-family: 'News Cycle', sans-serif;
     font-size: 25vw;
-    color: #E0E0E0;
-    opacity: 0.4;
+    color: #80CBC4;
+    opacity: 0.3;
     bottom: 40%;
     left: 5%;
     z-index: -5;
