--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -22,7 +22,7 @@ nav {
     color: #fff;
 }
 
-a.waves-effect.waves-light.btn {
+a.waves-effect.waves-light.btn, .file-field .btn {
   background-color: #CDDC39;
   color: #263238;
 }
