--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -10,9 +10,9 @@
 
   %nav.nav-wrapper
     %ul
-      %li= link_to 'MARIAN SERNA'
+      %li= link_to 'MARIAN SERNA', about_url
       %li= "X"
-      %li= link_to 'BLOG'
+      %li= link_to 'BLOG', root_url
 
 
       %ul#nav-mobile.right.hide-on-med-and-down
