--- a/app/assets/stylesheets/pages/categories.scss
+++ b/app/assets/stylesheets/pages/categories.scss
@@ -1,8 +1,7 @@
-
 #index-container {
   box-sizing: border-box;
   position: relative;
-  margin: 10% 15% 5% 15%;
+  padding: 10% 15% 5% 15%;
 
   .categories {
     display: flex;
@@ -11,6 +10,7 @@
     justify-content: center;
     align-items: flex-end;
     flex-wrap: wrap;
+    padding-top: 10%;
 
     a.medium.category_wrapper {
       width: calc(30% - 10px);
@@ -36,29 +36,40 @@
     }
 
     .background {
-      background-color: #fff;
-      transform: translateY(184%);
+      background-color: #9E9E9E;
+      transform: translateY(186%);
     }
 
     h2 {
-      font-family: 'Playfair Display', serif;
+      font-family: $h2-font;
       border-bottom: solid 1px #263238;
       font-size: 1em;
       line-height: 1em;
-      color: #263238;
+      color: $h2-color;
     }
 
     h2:hover {
-      color: #CDDC39;
+      color: $h3-color;
     }
 
     h3 {
-      font-family: 'News Cycle', sans-serif;
+      font-family: $h2-font;
       font-size: 0.5em;
       line-height: 0.6em;
-      color: #263238;
+      color: $h3-color;
     }
+  }
+}
 
+@media(max-width: $tablet-breakpoint) {
+
+  #index-container .posts a.medium.post_wrapper {
+    width: 100%;
   }
 
+  .categories {
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+  }
 }
