--- a/app/assets/stylesheets/pages/featured.scss
+++ b/app/assets/stylesheets/pages/featured.scss
@@ -1,7 +1,7 @@
 #index-container {
   box-sizing: border-box;
   position: relative;
-  margin: 10% 15% 5% 15%;
+  padding: 10% 15% 5% 15%;
 
   .posts {
     display: flex;
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: flex-end;
     flex-wrap: wrap;
+    padding-top: 10%;
 
     a.medium.post_wrapper {
       width: calc(30% - 10px);
@@ -57,7 +58,18 @@
       line-height: 0.6em;
       color: #263238;
     }
+  }
+}
 
+@media(max-width: $tablet-breakpoint) {
+
+  #index-container .posts a.medium.post_wrapper {
+    width: 100%;
   }
 
+  .posts {
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+  }
 }
