--- a/app/assets/stylesheets/pages/post.scss
+++ b/app/assets/stylesheets/pages/post.scss
@@ -1,47 +1,46 @@
 #container {
   box-sizing: border-box;
   position: relative;
-  margin: 0% 15% 5% 15%;
-
-  .post_image img {
-    width: 100%;
-    height: 350px;
-    opacity: 0.5;
-  }
+  padding: 100px 15% 5% 15%;
+  background-color: $content-bg-color;
 
   .post_titles {
-    position: absolute;
-    width: 85%;
-    transform: translate(10%) translateY(-135%);
+    background-color: rgba(224,224,224 ,1);
+    padding: 40px;
 
     h2 {
-      font-family: 'Playfair Display', serif;
-      border-bottom: solid 1px #263238;
-      font-size: 2em;
+      font-family: $h2-font;
+      font-size: 3em;
       line-height: 1.5em;
       color: #263238;
+      margin-top: 0px;
+      padding-top: 15px;
+      margin-bottom: 0.3em;
+      text-align: right;
     }
 
     p {
-      font-family: 'News Cycle', sans-serif;
-      text-align: right;
+      font-family: $p-font;
       font-size: 1em;
       line-height: 1.5em;
-      color: #fff;
+      color: #000;
+      text-align: right;
+
     }
   }
 
   .content {
-    font-family: 'News Cycle', sans-serif;
     font-size: 1.2em;
     line-height: 1.5em;
     color: #757575;
-    padding: 8%;
+    padding: 10%;
+    background-color: $h2-color;
 
 
     p {
+      font-family: $p-font;
       line-height: 1.3em;
-      margin-top: 5%;
+      padding-top: 5%;
     }
   }
 }
@@ -52,6 +51,12 @@
   height: 150px;
   margin: 0px;
   padding: 0px;
+  background-color: $content-bg-color;
+
+  .background {
+    position: relative;
+    bottom: -15px;
+  }
 
   a {
     width: 33.33%;
@@ -63,20 +68,66 @@
     -webkit-filter: none;
   }
 
-  // .background {
-  //   background-color: #fff;
-  //   box-shadow: 2px 2px 3px #888888;
-  //   background-size: 80px 60px;
-  // }
-
   .post {
     height: 350px;
   }
 
   .titles {
-    padding: 15%;
-    color: #37474F;
-    font-family: 'News Cycle', sans-serif;
-    font-size: 1.2em;
+    padding: 20px;
+    background-color: rgba(250,250,250,0.7);
+    margin: 10px;
+
+    // Override variables
+
+    h2 {
+      font-family: $h2-font;
+      color: rgba(38,50,56 ,1);
+    }
+
+    h3 {
+      font-family: $h3-font;
+      color: $h2-color;
+    }
+
+    p {
+      font-family: $p-font;
+      color: rgba(38,50,56 ,1);
+    }
+  }
+}
+
+@media (max-width: $mobile-breakpoint) {
+
+  #container {
+    padding: 100px 5% 2% 5%;
+  }
+
+  .content p {
+    font-size: 0.7em;
+  }
+
+  .suggested_posts {
+    display: none;
+    // display: inline-block;
+    // background-color: $content-bg-color;
+    // overflow: scroll;
+    //
+    // .post {
+    //   background-image: none;
+    //   height:auto;
+    // }
+    //
+    // .background .titles {
+    //   padding: 10px 5px 10px 5px;
+    //
+    //   h2 {
+    //     font-size: 1em;
+    //   }
+    //
+    //   h3, p {
+    //     display: none;
+    //   }
+    // }
+
   }
 }
