--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,19 +2,35 @@
 %html
   %head
     %title Blog
+    %meta{name:'viewport', content:'width=device-width, initial-scale: 1'}
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %link{href: "https://fonts.googleapis.com/css?family=News+Cycle|Playfair+Display", rel: "stylesheet"}
-
+    %link{href: "https://fonts.googleapis.com/css?family=Cutive+Mono|Oswald|Playfair+Display", rel: "stylesheet"}
+    %link{rel: "stylesheet", href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/dracula.min.css"}
+    %script{src: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"}
 
 %body
-  %nav
+  %nav.desktop
     %ul
       %li= link_to 'MARIAN SERNA', about_url
       %li= "X"
       %li= link_to 'BLOG', root_url
-      %li.right= link_to 'Portfolio', 'http://www.marianserna.com'
+      %li.right= link_to 'Portfolio', 'https://www.marianserna.com'
+
+  %nav.mobile
+    .menu-trigger
+      .cd-single-point
+        .menu-text
+          ME
+          %br
+          %hr
+          NU
+    %ul
+      %li= link_to 'Featured', featured_posts_url
+      %li= link_to 'Categories', categories_url
+      %li= link_to 'Other Posts', posts_url
+      %li= link_to 'Home', root_url
 
 
   -# /This is for your flash message to show up
