--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -7,6 +7,7 @@ $desktop-nav-break: 769px;
 
 // Colours
 $h2-color: #fff;
+$h2-user-color: #CDDC39;
 $h3-color: #CDDC39;
 $p-color: #fff;
 $content-color: #424242;
@@ -17,6 +18,8 @@ $a-bg-color: #90A4AE;
 $content-bg-color: #212121;
 $nav-text-color: #BDBDBD;
 $a-hover-color: #CDDC39;
+$nav-desktop-bg-color: #212121;
+$nav-link-hover-color: #CDDC39;
 
 // Fonts
 
