Fixed media query for categories index

--- a/app/assets/stylesheets/pages/categories.scss
+++ b/app/assets/stylesheets/pages/categories.scss
@@ -63,7 +63,7 @@
 
 @media(max-width: $tablet-breakpoint) {
 
-  #index-container .posts a.medium.post_wrapper {
+  #index-container .categories a.medium.category_wrapper {
     width: 100%;
   }
 
