--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -26,8 +26,8 @@ $nav-link-hover-color: #CDDC39;
 $h1-font: 'Playfair Display', serif;
 $h2-font: 'Playfair Display', serif;
 $nav-font: 'Oswald', sans-serif;
-$h3-font: 'Lora', serif;
-$p-font: 'Lora', serif;
-$a-font: 'Lora', serif;
+$h3-font: 'Dosis', sans-serif;
+$p-font: 'Dosis', sans-serif;
+$a-font: 'Dosis', sans-serif;
 
 // Sizing / Padding
