--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -34,7 +34,7 @@
       }
 
       aside h2:hover {
-        color: #CDDC39;
+        color: #80DEEA;
       }
     }
 
@@ -78,7 +78,7 @@
           font-size: 0.8em;
           font-weight: lighter;
           line-height: 1.5em;
-          color: #CDDC39;
+          color: #80DEEA;
         }
 
         p {
@@ -102,7 +102,7 @@
       }
 
       a:hover {
-        border: solid 1px #CDDC39;
+        border: solid 1px #80DEEA;
       }
     }
   }
@@ -165,7 +165,7 @@
       }
 
       a:hover {
-        border: solid 1px #CDDC39;
+        border: solid 1px #80DEEA;
       }
 
       p {
