--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -7,8 +7,8 @@ $desktop-nav-break: 769px;
 
 // Colours
 $h2-color: #fff;
-$h2-user-color: #CDDC39;
-$h3-color: #CDDC39;
+$h2-user-color: #80DEEA;
+$h3-color: #80DEEA;
 $p-color: #fff;
 $content-color: #424242;
 $titles-bg-color: #263238;
@@ -17,9 +17,9 @@ $line-color: #263238;
 $a-bg-color: #90A4AE;
 $content-bg-color: #212121;
 $nav-text-color: #BDBDBD;
-$a-hover-color: #CDDC39;
+$a-hover-color: #80DEEA;
 $nav-desktop-bg-color: #212121;
-$nav-link-hover-color: #CDDC39;
+$nav-link-hover-color: #80DEEA;
 
 // Fonts
 
