--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,13 @@
 !!!
 %html
   %head
-    %title Blog
+    %title= display_title
     %meta{name:'viewport', content:'width=device-width, initial-scale: 1'}
     = csrf_meta_tags
+    - if content_for?(:meta)
+      = content_for(:meta)
+
+
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{href: "https://fonts.googleapis.com/css?family=Dosis|Oswald|Playfair+Display", rel: "stylesheet"}
