--- a/app/assets/stylesheets/pages/featured.scss
+++ b/app/assets/stylesheets/pages/featured.scss
@@ -37,8 +37,8 @@
     }
 
     .background {
+      width: 100%;
       background-color: #fff;
-      transform: translateY(0%);
     }
 
     h2 {
