--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= display_title
-    %meta{name:'viewport', content:'width=device-width, initial-scale: 1'}
+    %meta{name:'viewport', content:'width=device-width, initial-scale=1.0'}
     = csrf_meta_tags
     - if content_for?(:meta)
       = content_for(:meta)
